refactor
Signed-off-by: Yuhang Shi <clszzyh@gmail.com>